--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -15,37 +15,45 @@
     /* margin: 25px; */
 }
 
-.main-fold {
-    position: absolute;
-    /* top: 2rem; */
-
+.field {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    height: 100%;
+    /* justify-content: space-around; */
+    /* width: 100%; */
+    margin: 0.2rem;
 }
 
-@media (min-width: 720px) {
-    .nav-container {
-        background-color: transparent;
-        flex-direction: column;
-        margin-top: 2rem;
-    }
+.field-label {
+    display: block;
+    color: rgba(0, 0, 0, 0.87);
+    font-size: 1.1em;
+    font-weight: 600;
+    width: 8rem;
+}
 
-    .nav-container form {
-        margin-top: 2rem;
-    }
+.field-input {
+    font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    outline: 0;
+    /* line-height: 1.2em; */
+    /* padding: 0.7em 1em; */
+    font-size: 1em;
+    background: #fff;
+    border: 3px solid rgba(34, 36, 38, 0.15);
+    color: rgba(0, 0, 0, 0.87);
+    border-radius: 0.28571429rem;
+    box-shadow: 0 0 0 0 transparent inset;
+    transition: color 0.1s ease, border-color 0.1s ease;
 
-    .bottom-bar {
-        justify-self: flex-end;
+    width: 15rem;
+    vertical-align: top;
+}
 
-        flex-direction: column;
-        justify-content: space-around;
-        align-self: center;
-        height: 20%;
+.field-button {
+    margin: 0 0.15rem;
+    padding: 2px;
+    border-radius: 3px;
+}
 
-        margin-bottom: 10rem;
-    }
+textarea {
+    height: 15rem;
 }
